community/wayshot: fix build on loongarch64
Update libc to v0.2.170
see:https://github.com/waycrate/wayshot/blob/main/Cargo.lock#L716

--- a/community/wayshot/APKBUILD
+++ b/community/wayshot/APKBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=wayshot
 pkgver=1.3.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A native screenshot tool for wlroots based compositors"
 url="https://github.com/waycrate/wayshot"
 # s390x: no desktop on this arch
-# loongarch64: blocked by libc crate
-arch="all !s390x !loongarch64"
+arch="all !s390x"
 license="BSD-2-Clause"
 makedepends="cargo cargo-auditable"
-source="https://github.com/waycrate/wayshot/archive/$pkgver/wayshot-$pkgver.tar.gz"
+source="https://github.com/waycrate/wayshot/archive/$pkgver/wayshot-$pkgver.tar.gz
+	cargo-update.patch"
 options="!check"  # no tests provided
 
 
@@ -30,4 +30,5 @@ package() {
 
 sha512sums="
 395f3e03987d3dabaffaf898b05c1a1400a49664f07ea4bfd1920f106af870a8a38606d9cbd06040501ea6b6a6d1ee39e95f2e7826a08f7c4285ffd658e415af  wayshot-1.3.1.tar.gz
+a5bd9c4fdfe19195249dc3f90e7345a180aed48d672f0df4fde02f3820a1a8ffb3ab709e112d17eb28c8ebb32d6f4c3785121742d45a2e55414bf90609b86c74  cargo-update.patch
 "
