--- a/community/nix/APKBUILD
+++ b/community/nix/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 maintainer="Hoang Nguyen <folliekazetani@protonmail.com>"
 pkgname=nix
-pkgver=2.24.12
-pkgrel=1
+pkgver=2.26.3
+pkgrel=0
 pkgdesc="The purely functional package manager"
 url="https://nixos.org/nix/"
 arch="x86 x86_64 aarch64"  # supported platforms
@@ -12,21 +12,21 @@ depends="ca-certificates"
 depends_dev="boost-dev"
 makedepends="
 	$depends_dev
-	autoconf
-	autoconf-archive
-	automake
 	bash
 	bison
 	brotli-dev
-	bsd-compat-headers
 	busybox-static
 	bzip2-dev
+	cmake
 	coreutils
+	curl
 	curl-dev
+	doxygen
 	editline-dev
 	flex
 	gc-dev
 	gtest-dev
+	hexdump
 	jq
 	libarchive-dev
 	libgit2-dev
@@ -37,16 +37,21 @@ makedepends="
 	lowdown-dev
 	man-db
 	mdbook
+	meson
 	nlohmann-json
 	openssl-dev
+	perl-dbd-sqlite
+	perl-dev
 	rapidcheck-dev
 	sqlite-dev
 	toml11
 	xz
+	rsync
 	"
 pkggroups="nix nixbld"
 install="$pkgname.pre-install"
 subpackages="
+	perl-$pkgname:perl
 	$pkgname-dev
 	$pkgname-openrc
 	$pkgname-manual::noarch
@@ -61,8 +66,6 @@ source="https://github.com/NixOS/nix/archive/$pkgver/nix-$pkgver.tar.gz
 	nix-daemon.initd
 
 	no-linkcheck.patch
-	lowdown-1-4.patch
-	no-coverage-reports.patch
 	"
 
 # secfixes:
@@ -73,32 +76,31 @@ case "$CARCH" in
 	x86*) makedepends="$makedepends libcpuid-dev";;
 esac
 
-prepare() {
-	default_prepare
-	autoreconf -vfi
-}
-
 build() {
+	# Don't include functional tests in the build.
+	# It executes various nix-* binaries, assuming they are in the same bindir.
+	sed -i -e '/nix-functional-tests/d' meson.build
+
 	# NOTE: /nix/var is recommended by upstream and we need /nix anyway.
-	bash ./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr \
-		--sysconfdir=/etc \
-		--mandir=/usr/share/man \
+	abuild-meson \
+		--buildtype=release \
 		--localstatedir=/nix/var \
-		--with-sandbox-shell=/bin/busybox.static \
-		--enable-embedded-sandbox-shell \
-		--enable-gc
-	make
+		-Ddoc-gen=true \
+		-Dnix:profile-dir=/etc/profile.d \
+		-Dlibexpr:gc=enabled \
+		-Dlibstore:seccomp-sandboxing=enabled \
+		-Dlibstore:embedded-sandbox-shell=true \
+		-Dlibstore:sandbox-shell=/bin/busybox.static \
+		. build
+	meson compile -C build
 }
 
 check() {
-	make check
+	meson test --no-rebuild -C build
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" meson install --no-rebuild -C build
 
 	cd "$pkgdir"
 
@@ -106,14 +108,21 @@ package() {
 	# /etc/profile.d for multi-user installations.
 	#
 	# See https://github.com/NixOS/nix/issues/5848
-	rm -R etc/init \
-		usr/lib/systemd \
+	rm -R usr/lib/systemd \
+		usr/lib/tmpfiles.d \
 		etc/profile.d/nix.sh \
 		etc/profile.d/*.fish
 
 	mkdir -p usr/sbin
 	rm -f usr/bin/nix-daemon
 	ln -s ../bin/nix usr/sbin/nix-daemon
+
+	# Use our standard path for the Perl bindings
+	install -d -m 0755 usr/lib/perl5/vendor_perl
+	find usr/lib/perl5/site_perl \
+		-maxdepth 3 \( -type d -name Nix -o -name auto \) \
+		-exec cp -r {} usr/lib/perl5/vendor_perl +
+	rm -r usr/lib/perl5/site_perl
 
 	install -m 755 -D "$srcdir"/nix-remote.sh etc/profile.d/nix-remote.sh
 	install -m 755 -D "$srcdir"/nix-daemon.initd etc/init.d/nix-daemon
@@ -122,7 +131,7 @@ package() {
 
 	# Setup build users.
 	# Note: max-jobs should equal number of created nixbld<n> users.
-	install -d -m 0555 etc/nix
+	install -d -m 0755 etc/nix
 	cat > etc/nix/nix.conf <<-EOF
 		allowed-users = @nix
 		build-users-group = nixbld
@@ -133,15 +142,24 @@ package() {
 manual() {
 	pkgdesc="$pkgdesc (HTML manual)"
 
-	amove usr/share/doc/nix/manual
+	amove usr/share/doc/nix/manual \
+		usr/share/doc/nix/internal-api \
+		usr/share/doc/nix/external-api
+}
+
+perl() {
+	pkgdesc="$pkgdesc (Perl bindings)"
+	depends="$pkgname=$pkgver-r$pkgrel perl"
+	# perl-nix*: /usr/lib/perl5/core_perl/CORE/libperl.so: path not found
+	options="$options !tracedeps"
+
+	amove usr/lib/perl5
 }
 
 sha512sums="
-9c57a7dd66399f9c162cdd29f78b45af6e0a46ec950e1b78359e9e520afa1e56ea0c612abea9622f894b39bbe37b95762c88dbada94418d232133a2ba8f03686  nix-2.24.12.tar.gz
+844f852c94c9b8d253e774f0628a565aa35e898cc2d6f2961d44d6d23fd444dedaa5f52dc856180af126a0b3b0f6d0dd269464aa11096080d8a1da1f664aad0b  nix-2.26.3.tar.gz
 f6a8d67003a6f0cd54dc4dc26051e9f3d18d9c1c1d66c99324e3db017891a6fdd88d7be53de05ab21fa8f7635164a093069416a89cf322ea6f6888df066ea60b  README.alpine
 ad02313f026fe3286c7c2271f26bf074ba2966c12777d7109275555f1a616bf0f99c8f5e45a57161f383091867f1dfd4d84cfae7a6d8a075312608456975dc81  nix-remote.sh
 9e4568db987fbae5097f7bb086e8ad51742c2d229703104fb7e6f240ffb0ca72e57dc305fb238bcee4ec8002d780007af60f241b1f32b6aa413dd579d9c59e75  nix-daemon.initd
 4bf84827e2757a23680d4f3ad118d92d15010801343083dd362d291672a357d566a94f518afc36265628baaea2a0b1e4d87d33e53ba71e3c3ec7545fac66613e  no-linkcheck.patch
-6f2e53d44d099be80fbfbdc12a5723a0ee903b8e85c52b5695fcb2fa15cc1fcaa92bd3b5f13c800167771c9ec5d4f74041a5da65534d9d4503793f82d05346b4  lowdown-1-4.patch
-e49f4d265abebd934076259f97fac8b0937ab766ceed46819f22d771725ac4c53e98ee3548821d2235f24e34925e9097eeea08ee4397a79f0b7cae3aa3d2cd15  no-coverage-reports.patch
 "
