community/moarvm: upgrade to 2025.03
add -dbg subpackage, since Configure.pl has --debug in its options

use mimalloc to fix some segfaults seen while running NQP tests

--- a/community/moarvm/APKBUILD
+++ b/community/moarvm/APKBUILD
@@ -1,23 +1,37 @@
 # Contributor: Curt Tilmes <Curt.Tilmes@nasa.gov>
 # Maintainer: Curt Tilmes <Curt.Tilmes@nasa.gov>
 pkgname=moarvm
-pkgver=2024.09
+pkgver=2025.03
 pkgrel=0
 pkgdesc="VM with adaptive optimization and JIT compilation, built for Rakudo"
 url="https://moarvm.org/"
 arch="all"
 license="Artistic-2.0"
-depends_dev="$pkgname=$pkgver-r$pkgrel perl zstd-dev libffi-dev libuv-dev"
+depends_dev="
+	$pkgname=$pkgver-r$pkgrel
+	libffi-dev
+	libuv-dev
+	mimalloc2-dev
+	perl
+	zstd-dev
+	"
 makedepends="$depends_dev"
-subpackages="$pkgname-dev $pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/MoarVM/MoarVM/releases/download/$pkgver/MoarVM-$pkgver.tar.gz"
+subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc"
+source="$pkgname-$pkgver.tar.gz::https://github.com/MoarVM/MoarVM/releases/download/$pkgver/MoarVM-$pkgver.tar.gz
+	native-int-write.patch
+	"
 builddir="$srcdir/MoarVM-$pkgver"
 options="!check" # No tests
 
 build() {
 	unset CPPFLAGS CFLAGS
-	perl Configure.pl --prefix=/usr --has-libffi \
-		--has-libuv --no-mimalloc --debug
+	perl Configure.pl \
+		--prefix=/usr \
+		--has-libffi \
+		--has-libuv \
+		--has-mimalloc \
+		--debug \
+		--cc="$CC"
 	make
 }
 
@@ -26,16 +40,18 @@ package() {
 		DESTDIR="$pkgdir" install
 
 	install -Dvm644 Artistic2.txt CREDITS LICENSE \
-		MANIFEST README.markdown VERSION \
+		MANIFEST README.md VERSION \
 		-t "$pkgdir"/usr/share/doc/"$pkgname"
 	cp -vr docs "$pkgdir"/usr/share/doc/"$pkgname"/
 }
 
 dev() {
 	default_dev
+
 	amove usr/share/nqp/lib
 }
 
 sha512sums="
-ff3b3db60a726e5dfdca617dc5ea4393b84e2317a6ca8079a7cebb7737a5cf614850097cc73b5d7d3edf8c9f7ff0ffb375ec73b67d591d31f90aca1d2bb5f079  moarvm-2024.09.tar.gz
+6db60d57503178bc137308ab092284d1949120b6c82ee10a00c3fbfdac927bacc210caf19de85972248adab67ce96e45fdb1443013b9a76201491777813fbce8  moarvm-2025.03.tar.gz
+5a9a47ceeefa1a0848811977193f483c346126231debfc03fd0b542f6186414bafc576d075ae05fdceddf5f121f01b8fce5c8edb72e41ceb5e88b6cb1d5af563  native-int-write.patch
 "
