community/nqp: upgrade to 2025.03

--- a/community/nqp/APKBUILD
+++ b/community/nqp/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Curt Tilmes <Curt.Tilmes@nasa.gov>
 # Maintainer: Curt Tilmes <Curt.Tilmes@nasa.gov>
 pkgname=nqp
-pkgver=2024.09
+pkgver=2025.03
 pkgrel=0
 pkgdesc="Not Quite Perl"
 url="https://github.com/Raku/nqp"
@@ -9,14 +9,19 @@ arch="all"
 options="!archcheck" # Arch dependencies are embedded
 license="Artistic-2.0"
 depends="moarvm~$pkgver"
-makedepends="perl-utils moarvm-dev~$pkgver"
+makedepends="
+	moarvm-dev~$pkgver
+	perl-utils
+	"
 checkdepends="perl-test-harness"
 subpackages="$pkgname-doc"
 source="https://github.com/Raku/nqp/releases/download/$pkgver/nqp-$pkgver.tar.gz"
 
 build() {
-	perl Configure.pl --prefix=/usr --backends=moar
-	make -j"$JOBS"
+	perl Configure.pl \
+		--prefix=/usr \
+		--backends=moar
+	make
 }
 
 check() {
@@ -36,5 +41,5 @@ package() {
 }
 
 sha512sums="
-6d152a25404de819197ea89b28b4411ffd4ef11932d8af1f02300958ecd1d323c10ab03711a5332fb48728be3e022bab8400bd662c4e06fc061df382b34c630e  nqp-2024.09.tar.gz
+68bb9c103d2ea421686b7c59300da960c16f3cd08ed6b02a71bc3ff4bd7d9a570ea55c2a4c5846bdd1843c8fab9e1dca3719857ebe2b778d48f61cc80bdfb268  nqp-2025.03.tar.gz
 "
