community/rakudo: upgrade to 2025.03

--- a/community/rakudo/APKBUILD
+++ b/community/rakudo/APKBUILD
@@ -1,14 +1,17 @@
 # Contributor: Curt Tilmes <Curt.Tilmes@nasa.gov>
 # Maintainer: Curt Tilmes <Curt.Tilmes@nasa.gov>
 pkgname=rakudo
-pkgver=2024.09
+pkgver=2025.03
 pkgrel=0
 pkgdesc="Compiler for the Raku programming language"
 url="https://rakudo.org/"
 arch="all"
 license="Artistic-2.0"
 depends="nqp~$pkgver"
-makedepends="perl-utils moarvm-dev~$pkgver"
+makedepends="
+	moarvm-dev~$pkgver
+	perl-utils
+	"
 checkdepends="perl-test-harness"
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://github.com/rakudo/rakudo/releases/download/$pkgver/rakudo-$pkgver.tar.gz
@@ -16,9 +19,11 @@ source="https://github.com/rakudo/rakudo/releases/download/$pkgver/rakudo-$pkgve
 	"
 
 build() {
-	perl Configure.pl --prefix=/usr --backends=moar \
+	perl Configure.pl \
+		--prefix=/usr \
+		--backends=moar \
 		--rakudo-home=/usr/share/"$pkgname"
-	make -j"$JOBS"
+	make
 }
 
 check() {
@@ -44,6 +49,7 @@ package() {
 
 dev() {
 	default_dev
+
 	amove	usr/bin/perl6-debug* usr/bin/perl6-gdb-m \
 		usr/bin/perl6-lldb-m usr/bin/perl6-valgrind-m \
 		usr/bin/rakudo-debug* usr/bin/rakudo-gdb-m \
@@ -55,6 +61,6 @@ dev() {
 }
 
 sha512sums="
-b22bc031b0cfaec02bb986038b5bbf319f0808ca5411e0c4a00b30899319936b7967c86eb7e7cde844889886e5bce9854e5cc2409a2ff00b93d6bcb77247bdf2  rakudo-2024.09.tar.gz
+98fd583cc560a0793040baba7a700c6425791ae05d04780240a31e9b9cf11ea5b9814130021b83ab7dce6f76c993a5908622b398e76ada278cd79eb422a9fba0  rakudo-2025.03.tar.gz
 1881c8e3e4ad956ba26dbbb0c818b4f26d39c8582bd2f47cc92ebb10620f0ed0803b5619a8a281350d6aceeadfb88675eca59cf52701c837ca20e966daa5deb3  telemetry-tests-32bit.patch
 "
