testing/art_standalone: enable on x86

--- a/testing/art_standalone/APKBUILD
+++ b/testing/art_standalone/APKBUILD
@@ -5,7 +5,7 @@ pkgrel=0
 _commit="60d754b814ce665daeac947f60f24eac23775171"
 pkgdesc="A standalone version of Dalvik with Art build in"
 url="https://gitlab.com/android_translation_layer/art_standalone"
-arch="x86_64 aarch64 armv7"
+arch="x86_64 aarch64 armv7 x86"
 license="Apache-2.0"
 depends="
 	java-cacerts
@@ -68,7 +68,9 @@ subpackages="
 	$pkgname-dev
 	$pkgname-dbg
 	"
-source="https://gitlab.com/android_translation_layer/art_standalone/-/archive/$_commit/art_standalone-$_commit.tar.gz"
+source="https://gitlab.com/android_translation_layer/art_standalone/-/archive/$_commit/art_standalone-$_commit.tar.gz
+	0001-art_standalone-libunwind-x86-fix-incompoatible-pointer-type-error.patch
+	"
 options="!check" # No tests
 builddir="$srcdir/art_standalone-$_commit"
 
@@ -123,4 +125,5 @@ adbd() {
 
 sha512sums="
 3a85e82279d064a470d0f03e5cea5ab76f5bc62153dd0b8d614bcdb2821a7b9c2a527787ac7c10729baf4bb6b12155c6a730ae40d0a4b16030f59b07eed7d7d1  art_standalone-60d754b814ce665daeac947f60f24eac23775171.tar.gz
+7f61a7906bf91a4fdd66c973bf951a7445e68882fe411849de4a086e9fb1d1ac748f0b7406a9387dd25555b174744fcc6e4a29caf9953cab57e5896c686dfede  0001-art_standalone-libunwind-x86-fix-incompoatible-pointer-type-error.patch
 "
