testing/android-translation-layer: enable on x86

--- a/testing/android-translation-layer/APKBUILD
+++ b/testing/android-translation-layer/APKBUILD
@@ -5,7 +5,7 @@ pkgrel=0
 _commit="882cd1b471bb5ad411a148ba972dc70c31e8ca84"
 pkgdesc="A translation layer for running Android apps on a Linux system"
 url="https://gitlab.com/android_translation_layer/android_translation_layer"
-arch="x86_64 aarch64 armv7"
+arch="x86_64 aarch64 armv7 x86"
 license="GPL-3.0-only"
 # libopensles-standalone is not strictly required but some Android applications depend on it
 depends="libopensles-standalone"
