--- a/testing/libopensles-standalone/APKBUILD
+++ b/testing/libopensles-standalone/APKBUILD
@@ -1,12 +1,11 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-# Maintainer: Bart Ribbers <bribbers@disroot.org>
+maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=libopensles-standalone
 pkgver=0_git20240221
 pkgrel=0
 _commit="605a83f47263a022427afb6e95801bd39b459b78"
 pkgdesc="A lightly patched version of Google's libOpenSLES implementation"
 url="https://gitlab.com/android_translation_layer/libopensles-standalone"
-arch="x86_64 aarch64 armv7"
+arch="x86_64 aarch64 armv7 x86"
 license="Apache-2.0"
 makedepends="
 	libsndfile-dev
