testing/bionic_translation: enable on x86

--- a/testing/bionic_translation/APKBUILD
+++ b/testing/bionic_translation/APKBUILD
@@ -5,7 +5,7 @@ pkgrel=0
 _commit="556344096e6e9b9aa62d03964e252ae0563e6fb3"
 pkgdesc="A set of libraries for loading bionic-linked .so files on musl/glibc"
 url="https://gitlab.com/android_translation_layer/bionic_translation"
-arch="x86_64 aarch64 armv7"
+arch="x86_64 aarch64 armv7 x86"
 license="Apache-2.0"
 makedepends="
 	elfutils-dev
