community/jimtcl: upgrade to 0.83

--- a/community/jimtcl/APKBUILD
+++ b/community/jimtcl/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=jimtcl
-pkgver=0.82
-pkgrel=1
+pkgver=0.83
+pkgrel=0
 pkgdesc="An open-source, small footprint implementation of Tcl"
 url="https://github.com/msteveb/jimtcl"
 arch="all"
@@ -19,6 +19,7 @@ makedepends="
 options="net"  # fix check with abuild rootbld
 subpackages="$pkgname-dbg $pkgname-readline $pkgname-sqlite3 $pkgname-dev $pkgname-doc"
 source="https://github.com/msteveb/jimtcl/archive/$pkgver/jimtcl-$pkgver.tar.gz
+	include-stdio-h.patch
 	tests-skip-exec2-3.2.patch
 	tests-skip-socket.patch
 	"
@@ -86,7 +87,8 @@ dev() {
 }
 
 sha512sums="
-d0f8c8d515b9c7eee3ee2089a8fe9b8616b0541b7fca6b769132201c3a65a8216f9e8a333c6a3a4c2a8fa4754ab0c9d3c2bca3306b3b4db566d4f3e401a709fe  jimtcl-0.82.tar.gz
+fbdcb84eb5d6be55fbb8d192654e22e3bc6e0e2685bc68bd0e4e5cbf9ac9cde7012780b02b9c98830954d28733494d5aacd9595c4cec353dd0945ee09d4194b4  jimtcl-0.83.tar.gz
+3f2ff295f72015234c71f8893b3d52ac0c1de18c8e70c8b64037363598955f2c78e9f4d5c91d037629e7a4445c9f1ec19d3ec8153043b4d1812074e1cf41d33f  include-stdio-h.patch
 188df3307b0983bda5904f1ec26ba195f7cb435244bc516d4b8b5377320ab37a76f44500af6faac1e3dfee2dae8bc8f942b8543268d56aa21bd59de4d34099da  tests-skip-exec2-3.2.patch
 cbc3f08d23cfe7ebd45e677a09e7178436e728a965ab7af44d6e27621049c1cdc82768c4e81397004be3486bf3f767684601ec28d3584ea14d3dde69ccdd8bdb  tests-skip-socket.patch
 "
