community/jimtcl: improve code-style

--- a/community/jimtcl/APKBUILD
+++ b/community/jimtcl/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="An open-source, small footprint implementation of Tcl"
 url="https://github.com/msteveb/jimtcl"
 arch="all"
 license="BSD-2-Clause"
-depends_dev="openssl-dev>3"
+depends_dev="openssl-dev"
 makedepends="
 	$depends_dev
 	asciidoc
@@ -17,7 +17,13 @@ makedepends="
 	zlib-dev
 	"
 options="net"  # fix check with abuild rootbld
-subpackages="$pkgname-dbg $pkgname-readline $pkgname-sqlite3 $pkgname-dev $pkgname-doc"
+subpackages="
+	$pkgname-dbg
+	$pkgname-readline
+	$pkgname-sqlite3
+	$pkgname-dev
+	$pkgname-doc
+	"
 source="https://github.com/msteveb/jimtcl/archive/$pkgver/jimtcl-$pkgver.tar.gz
 	include-stdio-h.patch
 	tests-skip-exec2-3.2.patch
