--- a/community/netsurf/APKBUILD
+++ b/community/netsurf/APKBUILD
@@ -1,10 +1,10 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Contributor: ScrumpyJack <scrumpyjack@st.ilet.to>
 # Contributor: Miles Alan <m@milesalan.com>
-# Maintainer: ScrumpyJack <scrumpyjack@st.ilet.to>
+# Maintainer: Antoni Aloy <aaloytorrens@gmail.com>
 pkgname=netsurf
 pkgver=3.11
-pkgrel=0
+pkgrel=1
 pkgdesc="free, open source web browser"
 url="http://www.netsurf-browser.org"
 arch="all"
