community/rofi{,-wayland}: merge rofi-wayland into rofi
rofi-wayland supports both Wayland and X11, we just didn't enable X11
support in rofi-wayland because it was provided by the original rofi.

This two-package solution brings issues with ABI compatibility for plugins
(see #15974) and maintenance difficulties. It'll be better to replace the
original rofi with the Wayland-enabled fork completely.

See https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/75403
for more information.

Co-Authored-By: Jakub Jirutka <jakub@jirutka.cz>

--- a/community/rofi/APKBUILD
+++ b/community/rofi/APKBUILD
@@ -1,58 +1,66 @@
 # Contributor: Marvin Preuss <marvin@xsteadfastx.org>
-# Maintainer: Marvin Preuss <marvin@xsteadfastx.org>
+# Maintainer: Jakub Jirutka <jakub@jirutka.cz>
+maintainer="Jakub Jirutka <jakub@jirutka.cz>"
 pkgname=rofi
-pkgver=1.7.5
-pkgrel=1
-_libnkutils=d08fa898d71da4c11653284968ec14384dd70b6a
-_libgwater=555fa6df92434c1c3c7548b5a583b1d8ec3fabb3
+pkgver=1.7.8_p1
+_pkgver="${pkgver%_p*}+wayland${pkgver#*_p}"
+pkgrel=0
 pkgdesc="Window switcher, application launcher and dmenu replacement"
-url="https://github.com/davatorium/rofi"
+url="https://github.com/lbonn/rofi"
 arch="all"
 license="MIT"
 depends="$pkgname-themes>=$pkgver"
 makedepends="
-	meson
-	glib-dev
+	bison
 	cairo-dev
-	pango-dev
-	libxkbcommon-dev
-	libxcb-dev
+	flex
 	gdk-pixbuf-dev
+	glib-dev
+	libxcb-dev
+	libxkbcommon-dev
+	meson
+	pango-dev
+	ronn
+	startup-notification-dev
+	xcb-util-cursor-dev
 	xcb-util-dev
+	xcb-util-keysyms-dev
 	xcb-util-wm-dev
 	xcb-util-xrm-dev
-	xcb-util-cursor-dev
-	startup-notification-dev
-	flex
-	bison
-	ronn
+	wayland-dev
+	wayland-protocols
 	"
-checkdepends="cppcheck check-dev xkeyboard-config-dev"
-provider_priority=100  # highest (other provider is rofi-wayland aport)
-subpackages="$pkgname-dev $pkgname-doc $pkgname-themes::noarch"
-source="https://github.com/davatorium/rofi/releases/download/$pkgver/rofi-$pkgver.tar.gz
-	libnkutils-$_libnkutils.tar.gz::https://github.com/sardemff7/libnkutils/archive/$_libnkutils.tar.gz
-	libgwater-$_libgwater.tar.gz::https://github.com/sardemff7/libgwater/archive/$_libgwater.tar.gz
+checkdepends="
+	cppcheck
+	check-dev
+	xkeyboard-config-dev
+	"
+subpackages="
+	$pkgname-x11-wayland:_x11_wayland
+	$pkgname-wayland
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-themes::noarch
+	"
+source="https://github.com/lbonn/rofi/releases/download/$_pkgver/rofi-$_pkgver.tar.gz
 	scrollbar-test.patch
 	rofi-sensible-terminal-use-sh.patch
-	0001-format-string-test-Fix-for-GLib-2.73.1-e-time-format.patch_libnkutils
+	libnkutils-ignore-failing-asserts.patch
 	"
-
-prepare() {
-	default_prepare
-
-	rm -rf subprojects/libnkutils subprojects/libgwater
-	mv "$srcdir"/libnkutils-$_libnkutils subprojects/libnkutils
-	mv "$srcdir"/libgwater-$_libgwater subprojects/libgwater
-
-	cd subprojects/libnkutils
-	patch -Np1 -i "$srcdir"/0001-format-string-test-Fix-for-GLib-2.73.1-e-time-format.patch_libnkutils
-	cd ../..
-}
+builddir="$srcdir/rofi-$_pkgver"
 
 build() {
-	abuild-meson . output
+	abuild-meson \
+		-Dxcb=enabled \
+		-Dwayland=enabled \
+		. output
 	meson compile -C output
+
+	abuild-meson \
+		-Dxcb=disabled \
+		-Dwayland=enabled \
+		. output-wayland
+	meson compile -C output-wayland
 }
 
 check() {
@@ -70,16 +78,30 @@ package() {
 themes() {
 	pkgdesc="$pkgdesc (themes)"
 	depends=""
-	replaces="$pkgname rofi-wayland"  # for backward compatibility
+	replaces="$pkgname<1.7.0-r1 rofi-wayland<1.7.0-r1"  # for backward compatibility
 
 	amove usr/share/rofi/themes
 }
 
+_x11_wayland() {
+	pkgdesc="$pkgdesc (X11 and Wayland)"
+	depends="$pkgname=$pkgver-r$pkgrel !rofi-wayland"
+	install_if="$pkgname"
+
+	amove usr/bin/rofi
+}
+
+wayland() {
+	pkgdesc="$pkgdesc (Wayland only)"
+	depends="$pkgname=$pkgver-r$pkgrel !rofi-x11-wayland"
+
+	# Cannot amove due to path conflict with -x11-wayland.
+	install -Dm755 "$builddir"/output-wayland/rofi -t "$subpkgdir"/usr/bin/
+}
+
 sha512sums="
-00fed7032eb257d7659ee7cfde24875aec1d85a972d1e6dfc2cff3f2495b1316ea92cb4af3c00ddb0748a4e404fc9151232abf3866b8d017826e0f3a8a916d85  rofi-1.7.5.tar.gz
-ed5fca928929e9af09bf1889f8012b6c31d7a3fc780680e15c577152c79ec8df395a798b33816c07f6ccd5ea6938b88a69f8357612de944c1ff2a4f50b98f34d  libnkutils-d08fa898d71da4c11653284968ec14384dd70b6a.tar.gz
-1d9307167fa18c2d7249ae1df33286f646ade3d28c0aa22307d0d7d379c281a7e866a3e7f23da039bfccbe01e13e4d8f49929cac6a9e5df51d368ae3f9088588  libgwater-555fa6df92434c1c3c7548b5a583b1d8ec3fabb3.tar.gz
+947e7c386201ce7ded2deec856f7f1247c365509fb53db15134d224e7cfb8644d40b61beb774fec8ddc34af49c624f38452bfd392168480b1b7aaaea1dd733bc  rofi-1.7.8+wayland1.tar.gz
 dd01b088bdce17f0b2ff0a99a589b3fa50f954d00b6410d64f7fee48e81f9f019cdd0250fdbc6c58f531ac4f9ee59e29c28cf8aa37853e9253943f3db41b5d2c  scrollbar-test.patch
 c25940edf74a02c674da65d16c4fdbcc3bf6700c3b5f5e61d468851d5655490e3683b330dce0a15ea3ac4c3d440c63a69d48f3cea99cf7fd529b9de0fbfc9eae  rofi-sensible-terminal-use-sh.patch
-dc1eb60339e9edd1a1ed7f6e28ea527a4fe5f7a6f5e9363aec6164a99fa6dbf79d12778d3395f979623e607d3e1431c55398d2b6ac0004b6aa60e4156f7a1b12  0001-format-string-test-Fix-for-GLib-2.73.1-e-time-format.patch_libnkutils
+ba7b406c2ea423c1222c86bae6aa4a097ce4b1ab2e9f057a0b788d384eb3fd0782d78d64a619d36931af747d465764a4a765748baee29b5e872f34181d44a3a5  libnkutils-ignore-failing-asserts.patch
 "
