community/qt6*: upgrade to 6.8.1

--- a/community/qt6-qtgrpc/APKBUILD
+++ b/community/qt6-qtgrpc/APKBUILD
@@ -4,7 +4,7 @@
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtgrpc
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="Providing protobuf and gRPC support for Qt"
 url="https://qt.io/"
@@ -13,8 +13,11 @@ license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1
 depends_dev="
 	protobuf-dev
 	qt6-qtbase-dev
-	qt6-qtdeclarative-dev
 	"
+case "$CARCH" in
+	armhf) ;;
+	*) depends_dev="$depends_dev qt6-qtdeclarative-dev" ;;
+esac
 makedepends="$depends_dev
 	cmake
 	samurai
@@ -44,6 +47,12 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-c79c843fc12e9eedbb94b26fcf98ee90fd0b2808d388b6d6d1399cd2513f53125f599f4a4abd6d9385a2466d808120b0318e3ac6521bd702d2c4cac8fdd7905f  qtgrpc-everywhere-src-6.8.0.tar.xz
+4cd676f747072101cbd2d411d82dd56ecb79509ce67a9b443ce70f10ee03d40ea61c268df1eff2a3d9e42ee79a915bf45e0e174a0448423df4cb90034afb89b6  qtgrpc-everywhere-src-6.8.1.tar.xz
 "
