--- a/community/qt6-qtlanguageserver/APKBUILD
+++ b/community/qt6-qtlanguageserver/APKBUILD
@@ -3,13 +3,13 @@
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtlanguageserver
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="Qt implementation of the Language Server Protocol"
 url="https://qt.io/"
 arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-depends_dev="
+depends_dev="$pkgname-static
 	qt6-qtbase-dev
 	"
 makedepends="
@@ -17,7 +17,7 @@ makedepends="
 	cmake
 	samurai
 	"
-subpackages="$pkgname-dev"
+subpackages="$pkgname-static $pkgname-dev"
 options="!check" # No tests
 builddir="$srcdir/qtlanguageserver-everywhere-src-${pkgver/_/-}"
 
@@ -41,6 +41,12 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-717b9844cb86d5ee2e88d09b8764f47a290c4b13284361600e0e08d834c2d3957dde11ce9d1cc6b1025367e3bad1868cd3fdd0ed45056030c7cd037e79c67254  qtlanguageserver-everywhere-src-6.8.0.tar.xz
+bb5238e897123f87aeef5bdfc234025e16e1b229595e63e6c3e8b5b338405a1662ba1e7b2d07954bda83ffa7f8605bbb63d7ec822d55ef5428fafbc9de4b690e  qtlanguageserver-everywhere-src-6.8.1.tar.xz
 "
