--- a/community/qt6-qtspeech/APKBUILD
+++ b/community/qt6-qtspeech/APKBUILD
@@ -1,20 +1,23 @@
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtspeech
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="Qt6 module to make text to speech and speech recognition easy"
 url="https://qt.io/"
-arch="all"
+# armhf blocked by qt6-qtmultimedia
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	alsa-lib-dev
 	flite-dev
-	qt6-qtdeclarative-dev
 	qt6-qtmultimedia-dev
 	"
+case "$CARCH" in
+	armhf) ;;
+	*) depends_dev="$depends_dev qt6-qtdeclarative-dev" ;;
+esac
 makedepends="$depends_dev
 	cmake
 	perl
@@ -44,6 +47,12 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-d1e2597f5407775750378844a6daecb27da2c6ffe720e4008e11ade07f183ec4d64c0bd25845bef81d6d0c31f6dafe0df160265f952a050b72d88715379b7720  qtspeech-everywhere-src-6.8.0.tar.xz
+a20d89c5bcad354d1896c87bf9c0a401e824b5dcbf0e5c86a72381e8f7f9d5946f10536b7a54d899c2fd6b84018ccd9159be4ffdc84cf2e568b54c688aa1101d  qtspeech-everywhere-src-6.8.1.tar.xz
 "
