--- a/community/qt6-qt5compat/APKBUILD
+++ b/community/qt6-qt5compat/APKBUILD
@@ -1,9 +1,8 @@
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qt5compat
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="Module that contains unsupported Qt 5 APIs"
 url="https://qt.io/"
@@ -12,10 +11,11 @@ license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1
 # icu-data-full: see https://gitlab.alpinelinux.org/alpine/aports/-/issues/13814
 # qt6-qt5compat provides the same icu mib apis
 depends="icu-data-full"
-depends_dev="
-	qt6-qtbase-dev
-	qt6-qtdeclarative-dev
-	"
+depends_dev="qt6-qtbase-dev"
+case "$CARCH" in
+	armhf) ;;
+	*) depends_dev="$depends_dev qt6-qtdeclarative-dev" ;;
+esac
 makedepends="$depends_dev
 	cmake
 	perl
@@ -45,6 +45,13 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
+
 sha512sums="
-c2304da058f0acf3120348dc179080a3dc28c9cf3605a22a2e8fe2816e9f0aea7e38b22966f59ee85ce52d4a8ddf5084a5fd24932f31e5b40cb64fc09dbca100  qt5compat-everywhere-src-6.8.0.tar.xz
+ef1764820387a6c9461fe4e21e44f77c6e95068d4cb37ea221228f06596b7bdb2cbe971e8646832454749954cbc31942eb882808c1b5b3b4d1efce5cf84bd93b  qt5compat-everywhere-src-6.8.1.tar.xz
 "
