--- a/community/qt6-qtcharts/APKBUILD
+++ b/community/qt6-qtcharts/APKBUILD
@@ -1,22 +1,19 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtcharts
-pkgver=6.8.0
-pkgrel=0
+pkgver=6.8.1
+pkgrel=1
 pkgdesc="Provides a set of easy to use chart components"
 url="https://qt.io/"
-arch="all"
+# armhf blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-depends_dev="
-	qt6-qtbase-dev
-	qt6-qtdeclarative-dev
-	"
+depends_dev="qt6-qtdeclarative-dev"
 makedepends="$depends_dev
 	cmake
 	perl
+	qt6-qtbase-dev
 	samurai
 	"
 subpackages="$pkgname-dev"
@@ -43,6 +40,12 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-f422ea114571f6c01aa0af613614f40d6b11b0551c7de716ddaaba05ac44e9ca631648605e44af4a880961bbcab4b84a4f3a427fcc9462d33769cfb1c69456df  qtcharts-everywhere-src-6.8.0.tar.xz
+bd15caaf0a4f06d13a5fc18a2e7063061dd279609d9c6db7f98ca07ce576e7580a7f1fc65cbc291b4fe34287fa01bb7e4409c767c57e201817c5ead96fa5de45  qtcharts-everywhere-src-6.8.1.tar.xz
 "
