--- a/community/qt6-qtdatavis3d/APKBUILD
+++ b/community/qt6-qtdatavis3d/APKBUILD
@@ -1,14 +1,13 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtdatavis3d
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="Qt6 Data Visualization module"
 url="https://qt.io/"
-arch="all"
+# armhf blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="qt6-qtdeclarative-dev"
 makedepends="$depends_dev
@@ -41,6 +40,12 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-bcdc142d0944ced853bd08bca3f7618737e75867e3a2cfc4fc6c7694ae1a580a0d67c3f373d362dd4e57effa55761371b4450da08374497766657f96c108f381  qtdatavis3d-everywhere-src-6.8.0.tar.xz
+453120ae552d60b2ee365139a4c8cec929e7c45f20dcbbac4f163fd9459efea8ff7ff05d7580f236e97ba34449fafc415fd367d1812d752097f2290eaee14ec1  qtdatavis3d-everywhere-src-6.8.1.tar.xz
 "
