--- a/community/qt6-qtlocation/APKBUILD
+++ b/community/qt6-qtlocation/APKBUILD
@@ -1,22 +1,23 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtlocation
-pkgver=6.8.0
-pkgrel=0
+pkgver=6.8.1
+pkgrel=1
 pkgdesc="Helps you create viable mapping solutions using the data available from some of the popular location services"
 url="https://qt.io/"
-arch="all"
+# armhf blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends="xdg-utils"
-makedepends="
+depends_dev="
+	qt6-qtdeclarative-dev
+	qt6-qtpositioning-dev
+	"
+makedepends="$depends_dev
 	cmake
 	perl
-	qt6-qtpositioning-dev
 	qt6-qtbase-dev
-	qt6-qtdeclarative-dev
 	samurai
 	"
 subpackages="$pkgname-dev"
@@ -50,6 +51,13 @@ build() {
 package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
+
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-dcbeb6306c58b8809054be070fdcb00c8b3397c934bbd433d3e3152275cbbd662d67c9316a5724a229ec6e2874d5a2d33fa9693f1a0f0c4ffb294b92a0387d49  qtlocation-everywhere-src-6.8.0.tar.xz
+0d002e99b1e7434814a58e560a0730f0b1f9cc81cfe7d01001b2a2bd213b5ceaa4deaf6693f210f8576d7e76ac32fe22e758bc9c03888e7acfd4440902d454ac  qtlocation-everywhere-src-6.8.1.tar.xz
 "
