--- a/community/qt6-qtlottie/APKBUILD
+++ b/community/qt6-qtlottie/APKBUILD
@@ -1,14 +1,13 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtlottie
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="A family of player software for a certain json-based file format for describing 2d vector graphics animations"
 url="https://qt.io/"
-arch="all"
+# armhf blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	qt6-qtbase-dev
@@ -27,7 +26,6 @@ case $pkgver in
 	*_alpha*|*_beta*|*_rc*) _rel=development_releases;;
 	*) _rel=official_releases;;
 esac
-
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/${pkgver/_/-}/submodules/qtlottie-everywhere-src-${pkgver/_/-}.tar.xz"
 
 build() {
@@ -43,6 +41,12 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-be3f0c633ff4c6e4c23962de638ed58dd949fbce09a82c49dca76a0266d59617988ed85fd6b93a97924b1a4f0a9c378b87f8bc87b0de363a8034c4c7a6028d3d  qtlottie-everywhere-src-6.8.0.tar.xz
+d91485385a7296bf5a511e7c3a2ce18c34b959ab96914fbf079901a782e39c9bfce2f0e7ca400740603fc9b15172708ead7b00f995350fc09814206eecbdc0a4  qtlottie-everywhere-src-6.8.1.tar.xz
 "
