--- a/community/qt6-qtquicktimeline/APKBUILD
+++ b/community/qt6-qtquicktimeline/APKBUILD
@@ -1,13 +1,13 @@
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtquicktimeline
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="Qt module for keyframe-based timeline construction"
 url="https://qt.io/"
-arch="all"
+# armhf blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	qt6-qtbase-dev
@@ -43,6 +43,12 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-165d3dcf82c1a37bff31ece9ba3c1441e9dc147e93409dd81b876ff96e7857981eec5ccb8b03beb2fa56163db6d96f346c30788efcc3a675839c4c11176440f9  qtquicktimeline-everywhere-src-6.8.0.tar.xz
+479ec01b1c4ef829bca59458138eeeee0bcca5cee0b93cac01bfd6675ffd7a2bde31784b817760ae9fac908548a7ff581e8ea3f13237433e365471a9c570b8dc  qtquicktimeline-everywhere-src-6.8.1.tar.xz
 "
