--- a/community/qt6-qtsvg/APKBUILD
+++ b/community/qt6-qtsvg/APKBUILD
@@ -3,7 +3,7 @@
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtsvg
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="Classes for displaying the contents of SVG files"
 url="https://qt.io/"
@@ -24,7 +24,6 @@ case $pkgver in
 	*_alpha*|*_beta*|*_rc*) _rel=development_releases;;
 	*) _rel=official_releases;;
 esac
-
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/${pkgver/_/-}/submodules/qtsvg-everywhere-src-${pkgver/_/-}.tar.xz"
 
 # secfixes:
@@ -44,6 +43,12 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-fa5d0869dc17fb6d44343bddd2741ab7b9930dbb6ede53a1e60a816b5efb520d98a1aaf58a04e1f380e03d33b24070305256d6a255f21e575009099c3882404f  qtsvg-everywhere-src-6.8.0.tar.xz
+5c345e87b957370521ead10bb2fd02433d75a443021b6cf45a88e35f692a346607636ffaf6651f3d289cf4584e8c5732270173743eb79d048b3c580b9e00ec86  qtsvg-everywhere-src-6.8.1.tar.xz
 "
