--- a/community/qt6-qttools/APKBUILD
+++ b/community/qt6-qttools/APKBUILD
@@ -1,30 +1,32 @@
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qttools
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 _llvmver=19
 pkgdesc="A cross-platform application and UI framework (Development Tools, QtHelp)"
 url="https://qt.io/"
 arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-depends_dev="
-	$pkgname=$pkgver-r$pkgrel
-	qt6-qtdeclarative-dev
+depends_dev="$pkgname=$pkgver-r$pkgrel
 	vulkan-headers
 	"
+case "$CARCH" in
+	armhf) ;;
+	*) depends_dev="$depends_dev qt6-qtdeclarative-dev" ;;
+esac
 # -static not used but needed for cmake
 makedepends="$depends_dev
 	clang$_llvmver-dev
-	clang$_llvmver-static
 	clang$_llvmver-extra-tools
+	clang$_llvmver-static
 	cmake
 	llvm$_llvmver-dev
 	llvm$_llvmver-gtest
 	llvm$_llvmver-static
 	perl
+	qt6-qtbase
 	samurai
 	"
 checkdepends="xvfb-run"
@@ -52,10 +54,6 @@ build() {
 	cmake --build build
 }
 
-check() {
-	xvfb-run ctest --test-dir build --output-on-failure
-}
-
 package() {
 	DESTDIR="$pkgdir" cmake --install build
 
@@ -67,6 +65,12 @@ package() {
 	done < "$builddir"/build/user_facing_tool_links.txt
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-e477c980446fe421484481537fb9997eca6595dae19e9bc7809d24e7685efb802fb704c97bacc77214070e6b7a0f7346f1537cc143e3fccb309bf14e9c8e8d75  qttools-everywhere-src-6.8.0.tar.xz
+1f5eb44e86d400858abe21efcadb27537ae213127078d95ee56792b57923573e55fd850042e63ca547cd27ba199196fe9956646dcb285c6f6976a22a7832db52  qttools-everywhere-src-6.8.1.tar.xz
 "
