--- a/community/qt6-qtvirtualkeyboard/APKBUILD
+++ b/community/qt6-qtvirtualkeyboard/APKBUILD
@@ -1,14 +1,13 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtvirtualkeyboard
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="Virtual keyboard framework"
 url="https://qt.io/"
-arch="all"
+# armhf blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	hunspell-dev
@@ -45,6 +44,12 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 
+dev() {
+	default_dev
+
+	amove usr/lib/qt6/sbom
+}
+
 sha512sums="
-a01cfa1908a1932b1fb11c3efc7f3493f42cc9a6c80f56f1ef18b13677a9bbf3714bffd33e76465b90404b6b43d371de1778ed8dd38cac0b5288f36030e016db  qtvirtualkeyboard-everywhere-src-6.8.0.tar.xz
+be90765c490285638c9ed50a4cf666419f178c68f4bf8f0679a77fa4bc240fa31f36335197877813abb52ae70e9c2ec22548824add69aa5d1df14529517fef08  qtvirtualkeyboard-everywhere-src-6.8.1.tar.xz
 "
