testing/kotlin-language-server: upgrade to 1.3.13

--- a/testing/kotlin-language-server/APKBUILD
+++ b/testing/kotlin-language-server/APKBUILD
@@ -1,23 +1,27 @@
 # Contributor: Matthias Ahouansou <matthias@ahouansou.cz>
 # Maintainer: Matthias Ahouansou <matthias@ahouansou.cz>
 pkgname=kotlin-language-server
-pkgver=1.3.7
+pkgver=1.3.13
 pkgrel=0
 pkgdesc="Kotlin code completion, linting and more for any editor/IDE using the Language Server Protocol"
 url="https://github.com/fwcd/kotlin-language-server"
-arch="x86_64" # blocked by openjdk11, rest don't build, time out, or fail to build tests
+arch="all !armhf !armv7 !x86" # blocked by openjdk21
 license="MIT"
 checkdepends="maven"
-depends="openjdk11"
-source="$pkgname-$pkgver.tar.gz::https://github.com/fwcd/kotlin-language-server/archive/refs/tags/$pkgver.tar.gz"
-options="!archcheck"
+makedepends="gradle"
+depends="openjdk21"
+source="
+	$pkgname-$pkgver.tar.gz::https://github.com/fwcd/kotlin-language-server/archive/refs/tags/$pkgver.tar.gz
+	fix-unix-permission-literal.patch
+"
+options="net !archcheck !check" # see https://github.com/fwcd/kotlin-language-server/issues/430
 
 build() {
-	./gradlew :server:installDist
+	gradle :server:installDist -PjavaVersion=21
 }
 
 check() {
-	./gradlew :server:test
+	gradle :server:test -PjavaVersion=21
 }
 
 package() {
@@ -27,5 +31,6 @@ package() {
 }
 
 sha512sums="
-78ec728cdef1c1ac75804a25f9884f71e5af4c39a9275504aa87f9bd9588cd02eb8da4ffb04de9f50b5afb70e32d73f4ae53097e253b33b40f8162925760fbaf  kotlin-language-server-1.3.7.tar.gz
+3431fe487c263d4bb4d14fd58aba8d9703cd55ffdfb719536c4f8bbea807a3c83cbbad9fa158f910fb27bbb51581d7276374465d1f5a6f7ce1c0f419fb8b96ea  kotlin-language-server-1.3.13.tar.gz
+1d98885d8af74218462a0a27e20c189a800f6104c2c2d980eba0e5431529293e0064ffdfbceba2e954b45da5143a2e42b935c06d6f6cbafb8f860dfcc5c63984  fix-unix-permission-literal.patch
 "
