main/mariadb: enable more tests

--- a/main/mariadb/APKBUILD
+++ b/main/mariadb/APKBUILD
@@ -79,14 +79,6 @@ case "$CARCH" in
 		;;
 esac
 
-case "$CARCH" in
-	armv7|s390x)
-		# FIXME: sigbus armv7, sigsegv s390x
-		# test-aes
-		options="$options !check"
-		;;
-esac
-
 source="https://rsync.osuosl.org/pub/mariadb/mariadb-$pkgver/source/mariadb-$pkgver.tar.gz
 	$pkgname.initd
 	gcc13.patch
@@ -313,8 +305,12 @@ build() {
 }
 
 check() {
+	local disabled=
+	case "$CARCH" in
+		armv7) disabled="|aes" ;;
+	esac
 	# exclude test-connect which seems to be buggy. testsuite does not set port env var
-	ctest --test-dir build -E '(test-connect|mf_iocache|my_tzinfo)'
+	ctest --test-dir build -E "(test-connect|my_tzinfo$disabled)"
 }
 
 package() {
