testing/gambit: fix path to info documentation

--- a/testing/gambit/APKBUILD
+++ b/testing/gambit/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bryce Vandegrift <bryce@brycevandegrift.xyz>
 pkgname=gambit
 pkgver=4.9.5
-pkgrel=0
+pkgrel=1
 pkgdesc="Portable and efficient implementation of the Scheme language"
 url="https://gambitscheme.org/"
 # loongarch64: https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/67526
@@ -17,6 +17,7 @@ build() {
 	./configure --prefix=/usr \
 		--libdir=/usr/lib/gambit \
 		--docdir=/usr/share/doc/gambit \
+		--infodir=/usr/share/info \
 		--includedir=/usr/include/gambit \
 		--disable-cplusplus \
 		--disable-absolute-shared-libs \
