community/kwin: rebuild against Qt 6.8.1

--- a/community/qt6-qt3d/APKBUILD
+++ b/community/qt6-qt3d/APKBUILD
@@ -10,7 +10,10 @@ pkgdesc="C++ and QML APIs for easy inclusion of 3D graphics"
 url="https://qt.io/"
 arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-depends_dev="qt6-qtshadertools-dev"
+depends_dev="
+	qt6-qtdeclarative-dev
+	qt6-qtshadertools-dev
+	"
 makedepends="$depends_dev
 	assimp-dev
 	cmake
@@ -18,19 +21,6 @@ makedepends="$depends_dev
 	qt6-qtbase-dev
 	samurai
 	"
-case "$CARCH" in
-	armhf) ;;
-	*)
-		depends_dev="$depends_dev
-			qt6-qtdeclarative-dev
-			"
-		makedepends="$makedepends
-			qt6-qtdeclarative-dev
-			qt6-qtdeclarative-private-dev
-			"
-		;;
-esac
-
 subpackages="$pkgname-dev"
 options="!check" # No tests
 builddir="$srcdir/qt3d-everywhere-src-${pkgver/_/-}"
