--- a/community/qt6-qtlocation/APKBUILD
+++ b/community/qt6-qtlocation/APKBUILD
@@ -6,8 +6,7 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Helps you create viable mapping solutions using the data available from some of the popular location services"
 url="https://qt.io/"
-# armhf blocked by qt6-qtdeclarative
-arch="all !armhf"
+arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends="xdg-utils"
 depends_dev="
@@ -18,7 +17,6 @@ makedepends="$depends_dev
 	cmake
 	perl
 	qt6-qtbase-dev
-	qt6-qtdeclarative-private-dev
 	samurai
 	"
 subpackages="$pkgname-dev"
