--- a/community/qt6-qttools/APKBUILD
+++ b/community/qt6-qttools/APKBUILD
@@ -10,12 +10,9 @@ url="https://qt.io/"
 arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="$pkgname=$pkgver-r$pkgrel
+	qt6-qtdeclarative-dev
 	vulkan-headers
 	"
-case "$CARCH" in
-	armhf) ;;
-	*) depends_dev="$depends_dev qt6-qtdeclarative-dev" ;;
-esac
 # -static not used but needed for cmake
 makedepends="$depends_dev
 	clang$_llvmver-dev
