--- a/community/qt6-qtwebengine/APKBUILD
+++ b/community/qt6-qtwebengine/APKBUILD
@@ -10,8 +10,7 @@ pkgdesc="Provides support for web applications using the Chromium browser projec
 url="https://qt.io/"
 # riscv64, s390x unknown current CPU
 # ppc64le not supported by chromium
-# armhf blocked by qt6-qtdeclarative
-arch="all !riscv64 !s390x !ppc64le !armhf"
+arch="all !riscv64 !s390x !ppc64le"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	alsa-lib-dev
@@ -48,7 +47,6 @@ makedepends="$depends_dev
 	perl
 	py3-html5lib
 	python3
-	qt6-qtdeclarative-private-dev
 	samurai
 	"
 subpackages="$pkgname-dev"
