--- a/community/qt6-qtconnectivity/APKBUILD
+++ b/community/qt6-qtconnectivity/APKBUILD
@@ -1,5 +1,3 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
@@ -10,25 +8,16 @@ pkgdesc="Provides access to Bluetooth hardware"
 url="https://qt.io/"
 arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-depends_dev="bluez-dev"
+depends_dev="
+	bluez-dev
+	qt6-qtdeclarative-dev
+	"
 makedepends="$depends_dev
 	cmake
 	perl
 	qt6-qtbase-dev
 	samurai
 	"
-case "$CARCH" in
-	armhf) ;;
-	*)
-		depends_dev="$depends_dev
-			qt6-qtdeclarative-dev
-			"
-		makedepends="$makedepends
-			qt6-qtdeclarative-dev
-			"
-		;;
-esac
-
 subpackages="$pkgname-dev"
 builddir="$srcdir/qtconnectivity-everywhere-src-${pkgver/_/-}"
 
