--- a/community/qt6-qtmultimedia/APKBUILD
+++ b/community/qt6-qtmultimedia/APKBUILD
@@ -1,5 +1,3 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
@@ -8,8 +6,7 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Classes for audio, video, radio and camera functionality"
 url="https://qt.io/"
-# armhf blocked by failing to find Qt6::OpenGLPrivate
-arch="all !armhf"
+arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	$pkgname-ffmpeg=$pkgver-r$pkgrel
@@ -21,22 +18,19 @@ depends_dev="
 	libva-glx-dev
 	pulseaudio-dev
 	qt6-qtbase-dev
+	qt6-qtdeclarative-dev
 	qt6-qtshadertools-dev
 	qt6-qtsvg-dev
 	"
-case "$CARCH" in
-	armhf) ;;
-	*) depends_dev="$depends_dev qt6-qtdeclarative-dev" ;;
-esac
 makedepends="$depends_dev
 	cmake
 	perl
 	samurai
 	"
-# TODO: re-enable the -gstreamer subpackage
 subpackages="
 	$pkgname-dev
 	$pkgname-ffmpeg
+	$pkgname-gstreamer
 	"
 
 case $pkgver in
