--- a/community/qt6-qtpositioning/APKBUILD
+++ b/community/qt6-qtpositioning/APKBUILD
@@ -9,24 +9,16 @@ url="https://qt.io/"
 arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends="xdg-utils"
-depends_dev="qt6-qtbase-dev"
+depends_dev="
+	qt6-qtbase-dev
+	qt6-qtdeclarative-dev
+	"
 makedepends="$depends_dev
 	cmake
 	perl
 	qt6-qtbase-private-dev
 	samurai
 	"
-case "$CARCH" in
-	armhf) ;;
-	*)
-		depends_dev="$depends_dev qt6-qtdeclarative-dev"
-		makedepends="$makedepends
-			qt6-qtdeclarative-dev
-			qt6-qtdeclarative-private-dev
-			"
-		;;
-esac
-
 subpackages="$pkgname-dev"
 builddir="$srcdir/qtpositioning-everywhere-src-${pkgver/_/-}"
 options="!check" # no tests were found
@@ -56,7 +48,7 @@ build() {
 }
 
 check() {
-	ctest --test-dir build
+	ctest --test-dir build --output-on-failure
 }
 
 package() {
