--- a/community/qt6-qtquicktimeline/APKBUILD
+++ b/community/qt6-qtquicktimeline/APKBUILD
@@ -6,8 +6,7 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Qt module for keyframe-based timeline construction"
 url="https://qt.io/"
-# armhf blocked by qt6-qtdeclarative
-arch="all !armhf"
+arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	qt6-qtbase-dev
@@ -17,8 +16,6 @@ depends_dev="
 makedepends="$depends_dev
 	cmake
 	perl
-	qt6-qtbase-private-dev
-	qt6-qtdeclarative-private-dev
 	samurai
 	"
 subpackages="$pkgname-dev"
