--- a/community/qt6-qtspeech/APKBUILD
+++ b/community/qt6-qtspeech/APKBUILD
@@ -6,18 +6,14 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Qt6 module to make text to speech and speech recognition easy"
 url="https://qt.io/"
-# armhf blocked by qt6-qtmultimedia
-arch="all !armhf"
+arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	alsa-lib-dev
 	flite-dev
+	qt6-qtdeclarative-dev
 	qt6-qtmultimedia-dev
 	"
-case "$CARCH" in
-	armhf) ;;
-	*) depends_dev="$depends_dev qt6-qtdeclarative-dev" ;;
-esac
 makedepends="$depends_dev
 	cmake
 	perl
