--- a/community/qt6-qtwebsockets/APKBUILD
+++ b/community/qt6-qtwebsockets/APKBUILD
@@ -8,11 +8,10 @@ pkgdesc="Provides WebSocket communication compliant with RFC 6455"
 url="https://qt.io/"
 arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
-depends_dev="qt6-qtbase-dev"
-case "$CARCH" in
-	armhf) ;;
-	*) depends_dev="$depends_dev qt6-qtdeclarative-dev" ;;
-esac
+depends_dev="
+	qt6-qtbase-dev
+	qt6-qtdeclarative-dev
+	"
 makedepends="$depends_dev
 	cmake
 	perl
