--- a/testing/igsc/APKBUILD
+++ b/testing/igsc/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: FintasticMan <finlay.neon.kid@gmail.com>
 # Maintainer: FintasticMan <finlay.neon.kid@gmail.com>
 pkgname=igsc
-pkgver=0.9.3
+pkgver=0.9.5
 pkgrel=0
 pkgdesc="Intel graphics system controller firmware update library"
 url="https://github.com/intel/igsc"
@@ -9,13 +9,14 @@ arch="x86_64"
 license="Apache-2.0"
 makedepends="
 	cmake
+	cmocka-dev
 	eudev-dev
 	linux-headers
 	metee-dev
 	samurai
 	"
 subpackages="$pkgname-dev"
-source="https://github.com/intel/igsc/archive/V$pkgver/igsc-V$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/intel/igsc/archive/refs/tags/V$pkgver.tar.gz"
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
@@ -25,13 +26,14 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=ON \
-		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_BUILD_TYPE=MinSizeRel \
+		-DENABLE_TESTS="$(want_check && echo ON || echo OFF)" \
 		$crossopts
 	cmake --build build
 }
 
 check() {
-	ctest --test-dir build
+	ctest --test-dir build/tests
 }
 
 package() {
@@ -39,5 +41,5 @@ package() {
 }
 
 sha512sums="
-758059556efa6b94702291d11ca8267a3e4258299a324388c4a8fcb9efd2a2218ad354447ea32277439fc65d52f9481441d0bd699bfae1c375b7f807e21f9d94  igsc-V0.9.3.tar.gz
+6cd698e42cf5aa6b303fa1846b0906cbed16cb194bbdff860a11f9db31a2307a093f28d3caf19037ef9d4d62ef773066d88b9e0c0b7062fc24339ff4bdc9394e  igsc-0.9.5.tar.gz
 "
