main/bash-completion: take over maintainership
got approval of the maintainer via email

--- a/main/bash-completion/APKBUILD
+++ b/main/bash-completion/APKBUILD
@@ -1,6 +1,7 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Contributor: Sheila Aman <sheila@vulpine.house>
-# Maintainer: Lucas Ramage <ramage.lucas@protonmail.com>
+# Contributor: Lucas Ramage <ramage.lucas@protonmail.com>
+# Maintainer: fossdd <fossdd@pwned.life>
 pkgname=bash-completion
 pkgver=2.16.0
 pkgrel=0
@@ -65,7 +66,7 @@ build() {
 check() {
 	mkdir ./bin
 	ln -sf "$(command -v pytest-3)" ./bin/pytest
-	export PATH="${PATH}:$PWD/bin"
+	PATH="$PATH:$PWD/bin" \
 	make check
 }
 
