testing/lychee: upgrade to 0.18.1

--- a/testing/lychee/APKBUILD
+++ b/testing/lychee/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Orhun Parmaksız <orhunparmaksiz@gmail.com>
 # Maintainer: Orhun Parmaksız <orhunparmaksiz@gmail.com>
 pkgname=lychee
-pkgver=0.15.1
+pkgver=0.18.1
 pkgrel=0
 pkgdesc="Fast, async, resource-friendly link checker written in Rust"
 url=https://lychee.cli.rs
@@ -15,10 +15,12 @@ makedepends="
 	perl
 	make
 	pkgconf
+	openssl-dev
 	"
 subpackages="$pkgname-doc"
 options="net"
-source="$pkgname-$pkgver.tar.gz::https://github.com/lycheeverse/lychee/archive/v$pkgver/lychee-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/lycheeverse/lychee/archive/lychee-v$pkgver/lychee-$pkgver.tar.gz"
+builddir="$srcdir/$pkgname-$pkgname-v$pkgver"
 
 prepare() {
 	default_prepare
@@ -26,11 +28,11 @@ prepare() {
 }
 
 build() {
-	cargo auditable build --frozen --release --features vendored-openssl
+	cargo auditable build --frozen --release --no-default-features --features rustls-tls
 }
 
 check() {
-	cargo test --features vendored-openssl -- --test-threads 1
+	cargo test --no-default-features --features rustls-tls -- --test-threads 1
 }
 
 package() {
@@ -38,7 +40,6 @@ package() {
 	install -Dm 644 README.md -t "$pkgdir/usr/share/doc/$pkgname"
 	install -Dm 644 LICENSE-MIT -t "$pkgdir/usr/share/licenses/$pkgname"
 }
-
 sha512sums="
-642d0a35461e6fd2e22d518e984767fb54425f0b03b5b2ee5ccf019f91ec0fb5668231f54311c10140e96be13bb4cc2d1ef1be4c74b062992d46e6b3a54a0084  lychee-0.15.1.tar.gz
+f65a3f1349c892df81fd5fffc9295de3dda88b7bdec7c990201020eace8eb9310e0191f2fc2e50d0d954f93c6fecdfdb671406213f5037eb381f1843e708e4e5  lychee-0.18.1.tar.gz
 "
