--- a/main/ruby-minitest/APKBUILD
+++ b/main/ruby-minitest/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ruby-minitest
 _gemname=minitest
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=5.20.0
+pkgver=5.25.4
 pkgrel=0
 pkgdesc="Suite of testing facilities supporting TDD, BDD, mocking, and benchmarking for Ruby"
 url="https://github.com/minitest/minitest"
@@ -12,14 +12,11 @@ arch="noarch"
 license="MIT"
 depends="ruby"
 makedepends="ruby-rdoc"
-checkdepends="ruby-rake"
 subpackages="$pkgname-doc"
 source="https://github.com/minitest/minitest/archive/v$pkgver/$_gemname-$pkgver.tar.gz
 	https://rubygems.org/downloads/$_gemname-$pkgver.gem
-	test-remove-hoe.patch
 	"
 builddir="$srcdir/$_gemname-$pkgver"
-options="!check"  # circular dependency on ruby-rake
 
 prepare() {
 	default_prepare
@@ -34,7 +31,7 @@ build() {
 }
 
 check() {
-	ruby -Ilib -Itest -e "Dir.glob('./test/**/test_*.rb', &method(:require))"
+	ruby -I lib -I test -e "Dir.glob('./test/**/test_*.rb', &method(:require))" -- --verbose
 }
 
 package() {
@@ -64,7 +61,6 @@ doc() {
 }
 
 sha512sums="
-4872ad67a92c3065e821042165b2a1feafbd71ef4713e522fcc04293c8262d09d916947a73e1709560ccf2491a67a1badaf9a8626fddf1643a7a429d719b125d  minitest-5.20.0.tar.gz
-906dba1226ed301ad0d7aae2fa138670101e87b11ced69e0c362e65d74fee58a5341756fed8be1f2900863e19c11adcae35ed6ebe7372bb93be0c131dae85a3c  minitest-5.20.0.gem
-fdfc066799a351c1b237c2991501dc0c5e394c6066c873e8cc32941adc4ef956b5550fffae5d62a275917c82075264504dd1b457370703c2b870bfb28510f2ef  test-remove-hoe.patch
+b96ab19d68fea5dd219c51b23637142bd91d4e3bd8f939a435cead463729725731803921d53d7c730b667eb7252d6273b9881cb97aed4db811e843b0531eadcb  minitest-5.25.4.tar.gz
+0ede16b07f52cc81ce86941220406c3ce1d7cc6c7ef197fd8a345f1786d567be2963ad38718883c82ece1ff850e5e15ace7dc720d9a728e65421fa7ce1990282  minitest-5.25.4.gem
 "
