main/ruby-power_assert: upgrade to 2.0.5

--- a/main/ruby-power_assert/APKBUILD
+++ b/main/ruby-power_assert/APKBUILD
@@ -4,14 +4,14 @@ pkgname=ruby-power_assert
 _gemname=power_assert
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=2.0.4
+pkgver=2.0.5
 pkgrel=0
 pkgdesc="Debug tool for Ruby that displays intermediate results of a method chain"
 url="https://github.com/ruby/power_assert"
 arch="noarch"
 license="BSD-2-Clause AND Ruby"
 depends="ruby"
-checkdepends="ruby-pry ruby-rake ruby-test-unit"
+checkdepends="ruby-rake ruby-test-unit"
 makedepends="ruby-rdoc"
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/power_assert/archive/v$pkgver/$_gemname-$pkgver.tar.gz
@@ -57,6 +57,6 @@ doc() {
 }
 
 sha512sums="
-0308104500b6b7ab8fd409455be749d446ba499db7ba04541bcfa7063801c57593ac96b6f7c45ceea4f9bfe3d7e2e4befe4e48f2eced864f5e782902837f8899  power_assert-2.0.4.tar.gz
+52033582b00a1006b05b7ab608c467a0b19cc404de4df291ced26e20109670c9ad33a402ff47a615593581bba3d47fc7f2510aac21832fe19a641e961ff71fb6  power_assert-2.0.5.tar.gz
 eb4321b8ce33476e21f0cd6da92f1f2be93e0892f5e6043d6d5f5578160f1793993b10645c0b06b3b2df3e8190a10c83e5325c367001e222d98b290222c2edfe  gemspec.patch
 "
