main/ruby-test-unit: upgrade to 3.6.7 and disable check

--- a/main/ruby-test-unit/APKBUILD
+++ b/main/ruby-test-unit/APKBUILD
@@ -4,19 +4,21 @@ pkgname=ruby-test-unit
 _gemname=test-unit
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=3.6.2
+pkgver=3.6.7
 pkgrel=0
 pkgdesc="An xUnit family unit testing framework for Ruby"
 url="https://test-unit.github.io"
 arch="noarch"
 license="BSD-2-Clause AND Python-2.0 AND Ruby"
 depends="ruby ruby-power_assert"
+checkdepends="ruby-bigdecimal"
 makedepends="ruby-rdoc"
 subpackages="$pkgname-doc"
 source="https://github.com/test-unit/test-unit/archive/$pkgver/$_gemname-$pkgver.tar.gz
 	gemspec.patch
 	"
 builddir="$srcdir/$_gemname-$pkgver"
+options="!check"  # circular dependency on ruby-bigdecimal
 
 build() {
 	gem build $_gemname.gemspec
@@ -49,6 +51,6 @@ doc() {
 }
 
 sha512sums="
-d523412e080ea0ce1ac968c64279fbdc90afaed3b2052f357993583ed89a77d9977022aac74f3170bfc3cb7e716f1665a9705e0ed95a8db5f205f1b984f52d94  test-unit-3.6.2.tar.gz
+b6132d49f26797a5da31a041cc0e3e0ce3b31a9f71dc0be3150b1e983f7c7c6acc5d4fe58eee9f7ff75ea4edbc97008a93b736236babec5e8c9dd56a634cc720  test-unit-3.6.7.tar.gz
 22f54fcf272856a9455d5a7276896ec329377b106ab47e3d376158eee72cf570f4487dd87606d730d061e7b06e5d7a0ff561cd8d279a64d8af0ac04e0f2dba92  gemspec.patch
 "
