main/ruby-net-imap: upgrade to 0.5.4
...and run tests in verbose mode.

--- a/main/ruby-net-imap/APKBUILD
+++ b/main/ruby-net-imap/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ruby-net-imap
 _gemname=net-imap
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=0.4.16
+pkgver=0.5.4
 pkgrel=0
 pkgdesc="Ruby client api for Internet Message Access Protocol"
 url="https://github.com/ruby/net-imap"
@@ -13,6 +13,7 @@ license="BSD-2-Clause AND Ruby"
 depends="ruby"
 makedepends="ruby-rdoc"
 checkdepends="
+	ruby-base64
 	ruby-rake
 	ruby-test-unit
 	ruby-test-unit-ruby-core
@@ -20,6 +21,7 @@ checkdepends="
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/net-imap/archive/v$pkgver/$_gemname-$pkgver.tar.gz
 	gemspec.patch
+	no-simplecov.patch
 	"
 builddir="$srcdir/$_gemname-$pkgver"
 
@@ -33,7 +35,7 @@ build() {
 }
 
 check() {
-	rake test
+	rake test TESTOPTS="--verbose"
 }
 
 package() {
@@ -59,6 +61,7 @@ doc() {
 }
 
 sha512sums="
-de1a6afba0276f42b51c0f670a356ad22889f2058bb6183c3c9b2ef387c08b7a1e577668506d7ec3b103eb3ad6a945352483c8673147125572af468ad84d5202  net-imap-0.4.16.tar.gz
+e013b6c2c2933e69689a1b4912f4b5bd27e29118da04d74311d4f87032e9d5e74ca1ddd8bf3362763908eceab5f17dc4415ddaecac25cab7e6bd25c2fe6294f9  net-imap-0.5.4.tar.gz
 0e45fc58a667561a0ecf1db75013c9c33132073e945599d015e7f038684920cc49ae920133044c254a0b68dc25a290735c026ecafe1ffd301e9e436a3eda5d50  gemspec.patch
+53776944c9e577b4495cf6ac79da8498016d2de829de2e426804d63b3ccebfd3fcfef04ba4b3ca29ec16f3f387fdf3c7a2c8e11358edce2292b850cbd71d8ea4  no-simplecov.patch
 "
