main/ruby-prime: upgrade to 0.1.3

--- a/main/ruby-prime/APKBUILD
+++ b/main/ruby-prime/APKBUILD
@@ -4,24 +4,32 @@ pkgname=ruby-prime
 _gemname=prime
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=0.1.2
-pkgrel=2
+pkgver=0.1.3
+pkgrel=0
 pkgdesc="Prime numbers and factorization library"
 url="https://github.com/ruby/prime"
 arch="noarch"
 license="BSD-2-Clause AND Ruby"
 depends="ruby"
-checkdepends="ruby-rake ruby-test-unit"
+checkdepends="
+	ruby-rake
+	ruby-rbs
+	ruby-test-unit
+	ruby-test-unit-ruby-core
+	"
 makedepends="ruby-rdoc"
 subpackages="$pkgname-doc"
-source="https://github.com/ruby/prime/archive/v$pkgver/$_gemname-$pkgver.tar.gz
-	gemspec.patch
-	"
+source="https://github.com/ruby/prime/archive/v$pkgver/$_gemname-$pkgver.tar.gz"
 builddir="$srcdir/$_gemname-$pkgver"
 
 prepare() {
 	default_prepare
+
 	sed -i '/require .bundler/d' Rakefile
+
+	# This test is broken, it works only if "prime" is installed in /.
+	# (Cannot find type definitions for library prime)
+	rm test/test_rbs.rb
 }
 
 build() {
@@ -46,6 +54,9 @@ package() {
 	# Remove unnessecary files
 	cd "$gemdir"
 	rm -rf build_info cache extensions plugins
+
+	cd "$gemdir"/gems/$_gemname-$pkgver
+	rm README* Rakefile
 }
 
 doc() {
@@ -55,6 +66,5 @@ doc() {
 }
 
 sha512sums="
-a766426884d6b3cd7a586676799db146974ec9a4a7c30ca53b5f279ad55ee9960c9b5bb26988cb66253b4fe974f9b5087f48ef5b216772464d03b8ed78a817d6  prime-0.1.2.tar.gz
-ea60d064edd9247a0a1450d9e43385cd8fc84dfcb610bd4ab174fd104727eb8066b4ad8439b9b33a715aa93890a2b0a06127d58912752919aecbc2950e419a3e  gemspec.patch
+55216c5f691e7d3778fb062dc3b7ff12a2e69bb415711b40c4de444b8fbcb8b8573e8179d339fb2193ee955335d79349f00f4c9e85c2d95e506539afead45c8a  prime-0.1.3.tar.gz
 "
