main/ruby-rbs: upgrade to 3.8.0 and enable check

--- a/main/ruby-rbs/APKBUILD
+++ b/main/ruby-rbs/APKBUILD
@@ -4,21 +4,37 @@ pkgname=ruby-rbs
 _gemname=rbs
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=3.4.4
+pkgver=3.8.1
 pkgrel=0
 pkgdesc="Type Signature for Ruby"
 url="https://github.com/ruby/rbs"
 arch="all"
 license="BSD-2-Clause AND Ruby"
 depends="ruby ruby-bundler"
-checkdepends="ruby-rake ruby-test-unit"
-makedepends="ruby-dev ruby-rdoc"
+makedepends="
+	ruby-dev
+	ruby-rdoc
+	"
+checkdepends="
+	ruby-bigdecimal
+	ruby-rake
+	ruby-test-unit
+	"
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/rbs/archive/v$pkgver/$_gemname-$pkgver.tar.gz
 	gemspec.patch
 	"
 builddir="$srcdir/$_gemname-$pkgver"
-options="!check"  # FIXME: require gems that are not packaged yet
+
+prepare() {
+	default_prepare
+
+	# Requires ruby-json-schema which is not in main.
+	rm test/rbs/schema_test.rb
+
+	# FIXME: Tries to install gems to / via bundler.
+	rm test/rbs/cli_test.rb
+}
 
 build() {
 	gem build $_gemname.gemspec
@@ -34,7 +50,8 @@ build() {
 }
 
 check() {
-	GEM_PATH='dist' rake test
+	GEM_PATH='dist' SKIP_RBS_VALIDATION=1 ruby -I lib -I test \
+		-e "Dir.glob(['./test/*_test.rb', './test/rbs/*_test.rb'], &method(:require))" -- --verbose
 }
 
 package() {
@@ -59,6 +76,6 @@ doc() {
 }
 
 sha512sums="
-c6be887af1c89e7b9d8f01e248a24f571c189fc81f55d1625957434a3d1e74c5d23f9ba2089750cb742a82560165d9bab309cff8cdb6c9e455076051301c7dd4  rbs-3.4.4.tar.gz
-39f59efc8ed4af86314e630c19cbefdf5df740c3baf8e51e184a58f8a42df7fb5c47d8f3563e97fff1f41d38d3d4d80ba665378ac82b24983a9aa49d4f7e11e4  gemspec.patch
+e9ed09d493fac14f0aa9f1b97a440a2d424188cad3e4a4f62f5e1b5a34641e5c004b9de518327076bc0cf69d268391150ce74ca40ec36ac40964d87c9c7c1915  rbs-3.8.1.tar.gz
+10887b42cc913a08012cc2b34e7179540776c59ebbe305d0488c0f0d552defac1465baf3ec3b30ec3385a68621fecdfd2f9d0e65bff7f863814fff287d96a65a  gemspec.patch
 "
