--- a/main/ruby-debug/APKBUILD
+++ b/main/ruby-debug/APKBUILD
@@ -4,19 +4,22 @@ pkgname=ruby-debug
 _gemname=debug
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=1.9.2
+pkgver=1.10.0
 pkgrel=0
 pkgdesc="Debugging functionality for Ruby"
 url="https://github.com/ruby/debug"
 arch="all"
 license="BSD-2-Clause AND Ruby"
 depends="ruby"
+makedepends="
+	ruby-dev
+	ruby-rdoc
+	"
 checkdepends="
 	ruby-rake
 	ruby-test-unit
 	ruby-test-unit-rr
 	"
-makedepends="ruby-dev ruby-rdoc"
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/debug/archive/v$pkgver/$_gemname-$pkgver.tar.gz
 	gemspec.patch
@@ -49,7 +52,7 @@ build() {
 check() {
 	export RUBY_DEBUG_TEST_NO_REMOTE=1
 	# XXX: This test fails on GitLab CI, but passes locally.
-	export TESTOPTS="--ignore-name=/^test_list_socks$/"
+	export TESTOPTS="--verbose --ignore-name=/^test_list_socks$/"
 
 	GEM_PATH='dist' rake test
 }
@@ -79,6 +82,6 @@ doc() {
 }
 
 sha512sums="
-b65e7952f0020f79481273175abc382827283f667c52a29eee4f77303368e65ff71c517f8cd278b011ae81c335281d4303ab83e6c5d5c71cab9784cee56b8c63  debug-1.9.2.tar.gz
+d09071cc7158876bdc5dbb2f49cae585240de851f6586257898b48787d065050b92a990a541c2bad8fd70c52f83bec432fbed1efee1ee33700c0a3345e2ef16c  debug-1.10.0.tar.gz
 7d08028768c0a5024b32d1254f131204610db68f4ecbd72cca0677f499c5e426fba079e65a127453ca1d9685b094cb8feeddaa27bce72821e03a73e3f2bf5244  gemspec.patch
 "
