main/ruby-typeprof: upgrade to 0.30.1

--- a/main/ruby-typeprof/APKBUILD
+++ b/main/ruby-typeprof/APKBUILD
@@ -4,15 +4,19 @@ pkgname=ruby-typeprof
 _gemname=typeprof
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=0.21.11
+pkgver=0.30.1
 pkgrel=0
 pkgdesc="A type analysis tool for Ruby code based on abstract interpretation"
 url="https://github.com/ruby/typeprof"
 arch="noarch"
 license="MIT"
 depends="ruby ruby-rbs"
-checkdepends="ruby-bundler ruby-rake ruby-test-unit"
 makedepends="ruby-rdoc"
+checkdepends="
+	ruby-bundler
+	ruby-rake
+	ruby-test-unit
+	"
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/typeprof/archive/v$pkgver/$_gemname-$pkgver.tar.gz
 	gemspec.patch
@@ -52,6 +56,6 @@ doc() {
 }
 
 sha512sums="
-3ef58d5cee24f037a32984a7f9757958f0276732918a58c27aed15b11e43d57da92d4fcf41eeb017d7fe8cacfd801f0fc9cdcf03cfc2e663f8660097cde8fb61  typeprof-0.21.11.tar.gz
-38b5f848ecf7c60c8c82bd57fabb4a1113789c31602058cc32de4d2c186acb5ec8f6d966b7ec09ccbc080640b5137477b49b5918015fd4859b1b91a7069869e2  gemspec.patch
+5a3f15545bfae92ec82cf8ec4599df86324e4053ec61170fc740ed0bc8f25d6078cf73c37af003a4b5d2121ba98664863a0acc2975fc85e2a195068c545da7ee  typeprof-0.30.1.tar.gz
+665d7b4550e9f51bf739f41b7ff804386e532fad8ab1d6b58913c68cf7c6e4def6e5c2c5843fe771508f089c00aeaba3cdfa717649bfa7dc0a78daf7bffbf778  gemspec.patch
 "
