main/ruby-matrix: rebuild against ruby 3.4

--- a/main/ruby-matrix/APKBUILD
+++ b/main/ruby-matrix/APKBUILD
@@ -5,14 +5,17 @@ _gemname=matrix
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
 pkgver=0.4.2
-pkgrel=2
+pkgrel=3
 pkgdesc="An implementation of Matrix and Vector classes"
 url="https://github.com/ruby/matrix"
 arch="noarch"
 license="BSD-2-Clause AND Ruby"
 depends="ruby"
-checkdepends="ruby-rake ruby-test-unit"
 makedepends="ruby-rdoc"
+checkdepends="
+	ruby-rake
+	ruby-test-unit
+	"
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/matrix/archive/v$pkgver/$_gemname-$pkgver.tar.gz"
 builddir="$srcdir/$_gemname-$pkgver"
